--- a/views/admin/pages/roles/detail.pug
+++ b/views/admin/pages/roles/detail.pug
@@ -1,32 +1,37 @@
 extends ../../layouts/default.pug
+include ../../mixins/deny-access.pug
 
 block main
     .col-lg-10
         .main-content#mainContent(role="main")
-            section#product-detail.content-section
-                .card.detail-card
-                    .card-header.d-flex.justify-content-between.align-items-center
-                        h5.mb-0
-                            i.fas.fa-info-circle.mr-2
-                            | #{pageTitle}
-                        .d-flex.align-items-center
-                            a.btn.btn-outline-secondary.btn-sm.mr-2(href=`/${prefixAdmin}/roles`, aria-label="Quay lại danh sách")
-                                i.fas.fa-arrow-left.mr-1
-                                | Quay lại
-                            a.btn.btn-warning.btn-sm.btn-glow(href=`/${prefixAdmin}/roles/edit/${role._id}`, aria-label="Chỉnh sửa danh mục sản phẩm")
-                                i.fas.fa-edit.mr-1
-                                | Chỉnh sửa
+            if(authRole.permissions.includes('roles_view'))
+                section#product-detail.content-section
+                    .card.detail-card
+                        .card-header.d-flex.justify-content-between.align-items-center
+                            h5.mb-0
+                                i.fas.fa-info-circle.mr-2
+                                | #{pageTitle}
+                            .d-flex.align-items-center
+                                a.btn.btn-outline-secondary.btn-sm.mr-2(href=`/${prefixAdmin}/roles`, aria-label="Quay lại danh sách")
+                                    i.fas.fa-arrow-left.mr-1
+                                    | Quay lại
+                                if(authRole.permissions.includes('roles_edit'))
+                                    a.btn.btn-warning.btn-sm.btn-glow(href=`/${prefixAdmin}/roles/edit/${role._id}`, aria-label="Chỉnh sửa danh mục sản phẩm")
+                                        i.fas.fa-edit.mr-1
+                                        | Chỉnh sửa
 
-                    .card-body
-                        .row
-                            .col-md-7
-                                // Tiêu đề + badge trạng thái
-                                .d-flex.align-items-start.justify-content-between.flex-wrap
-                                    h3.detail-title.mb-2= role.title
-                                // Mô tả
-                                if role.description
-                                    .detail-desc.mt-3
-                                        h6.mb-2
-                                            i.fas.fa-align-left.mr-1
-                                            | Mô tả
-                                        p.lead-desc !{role.description}
+                        .card-body
+                            .row
+                                .col-md-7
+                                    // Tiêu đề + badge trạng thái
+                                    .d-flex.align-items-start.justify-content-between.flex-wrap
+                                        h3.detail-title.mb-2= role.title
+                                    // Mô tả
+                                    if role.description
+                                        .detail-desc.mt-3
+                                            h6.mb-2
+                                                i.fas.fa-align-left.mr-1
+                                                | Mô tả
+                                            p.lead-desc !{role.description}
+            else 
+                +deny-access()
